...
            }}
          />
          <MaterialBottomTabs.Screen
            name="balance"
            options={{
              tabBarAccessibilityLabel: "BalanceBottomTab",
              title: "Balance",
              tabBarIcon: ({ color }) => (
                <MaterialIcons name="balance" size={24} color={color} />
              ),
            }}
          />
          <MaterialBottomTabs.Screen
...
              ),
            }}    
          />
          <MaterialBottomTabs.Screen
            name="security"
            options={{
              tabBarAccessibilityLabel: "Security",
              title: "Security",
              tabBarIcon: ({ color }) => (
                <MaterialIcons name="security" size={24} color={color} />
              ),
            }}
          />
...
