...

            <Card className="w-4/5 px-2 py-4 rounded-md mt-4">
                <Text>Recoverer 1: {myTeamQuery.data.recoverer1Email}</Text>
                <Text>Recoverer 2: {myTeamQuery.data.recoverer2Email}</Text>
            </Card>
            <Button
                testID="confirm-team-button"
                mode="contained"
                className="w-3/4 mt-4 self-center"
                disabled={(!estimationQuery.data.isEnough && !estimationQuery.data.isSponsored) || confirmTeamMutation.isPending}
                loading={confirmTeamMutation.isPending}
                onPress={() => confirmTeamMutation.mutate({ teamId: myTeamQuery.data.id, address1: myTeamQuery.data.recoverer1Address!, address2: myTeamQuery.data.recoverer2Address! })}
            >
...
